--- a/style.css
+++ b/style.css
@@ -185,7 +185,7 @@ the website, in dark theme
 /*=============== HEADER ===============*/
 .header{
   width: 100%;
-  /* background-color: var(--body-color); */
+   /* background-color: hsl(var(--hue),8%, 12%); */
   background-color: rgba(67, 165, 105, 0.993);
   position: fixed;
   top: 0;
@@ -240,6 +240,7 @@ the website, in dark theme
   .nav__menu{
     position: fixed;
     background-color:hsl(var(--hue),8%, 12%);
+    color: #FFF;
     width: 80%;
     height: 100%;
     top: 0;
@@ -249,6 +250,9 @@ the website, in dark theme
     border-radius: 1rem 0 0 1rem;
     transition: .3s;
     z-index: var(--z-fixed);
+  }
+  body{
+    background-color:hsl(var(--hue),8%, 12%);
   }
 }
 
@@ -268,6 +272,7 @@ the website, in dark theme
 
 .nav__link{
   color: var(--title-color);
+  
   font-weight: var(--font-medium);
   transition: .3s;
   font-size: 20px;
