--- a/style.css
+++ b/style.css
@@ -121,17 +121,17 @@ body.dark-theme{
 }
 
 /*========== Button Dark/Light ==========*/
-.change-theme{
-  color: var(--title-color);
-  font-size: 1.15rem;
-  cursor: pointer;
-}
+                /* .change-theme{
+                  color: var(--title-color);
+                  font-size: 1.15rem;
+                  cursor: pointer;
+                } */
 
-.nav__btns{
+/* .nav__btns{
   display: inline-flex;
   align-items: center;
   column-gap: 1rem;
-}
+} */
 
 /*========== 
 Color changes in some parts of 
@@ -258,11 +258,7 @@ the website, in dark theme
   .about section .container{
     background-color: hsl(var(--hue),8%, 12%);
   }
-  body{
-    background-color: var(--body-color);
-    color: var(--text-color);
-    transition: .4s; /*For animation dark mode*/
-  }
+  
   .nav__link{
     color: var(--title-color);
   }
@@ -914,6 +910,9 @@ color:rgba(67, 165, 105, 0.993);
     margin-left: var(--mb-1);
     margin-right: var(--mb-1);
   }
+  body{
+    background-color: hsl(var(--hue),8%, 12%);
+  }
 
   .home__img{
     width: 180px;
@@ -940,6 +939,9 @@ color:rgba(67, 165, 105, 0.993);
   .steps__container{
     grid-template-columns: repeat(2, 1fr);
   }
+  body{
+    background-color: hsl(var(--hue),8%, 12%);
+  }
 
   .product__description{
     padding: 0 4rem;
@@ -958,6 +960,9 @@ color:rgba(67, 165, 105, 0.993);
 @media screen and (min-width: 767px){
   body{
     margin: 0;
+  }
+  body{
+    background-color: hsl(var(--hue),8%, 12%);
   }
 
   .nav{
@@ -1015,6 +1020,9 @@ color:rgba(67, 165, 105, 0.993);
   .container{
     margin-left: auto;
     margin-right: auto;
+  }
+  body{
+    background-color: hsl(var(--hue),8%, 12%);
   }
 
   .section{
