--- a/style.css
+++ b/style.css
@@ -121,17 +121,17 @@ body.dark-theme{
 }
 
 /*========== Button Dark/Light ==========*/
-                /* .change-theme{
+                .change-theme{
                   color: var(--title-color);
                   font-size: 1.15rem;
                   cursor: pointer;
-                } */
+                }
 
-/* .nav__btns{
+.nav__btns{
   display: inline-flex;
   align-items: center;
   column-gap: 1rem;
-} */
+}
 
 /*========== 
 Color changes in some parts of 
