--- a/style.css
+++ b/style.css
@@ -951,6 +951,12 @@ color:rgba(67, 165, 105, 0.993);
   .footer__subscribe{
     width: 400px;
   }
+
+
+
+  .nav__link{
+    color: #FFF;
+  }
 }
 
 @media screen and (min-width: 767px){
